--- a/src/lib/styles/_global.scss
+++ b/src/lib/styles/_global.scss
@@ -75,7 +75,7 @@
         -moz-tab-size: 4;
         -o-tab-size: 4;
         tab-size: 4;
-        font-family: var(--font-family-sans);
+        font-family: "M PLUS 1", sans-serif;
     }
 
     body {
