--- a/src/renderer/style/_global.scss
+++ b/src/renderer/style/_global.scss
@@ -71,10 +71,6 @@ body {
       background: #45e3ff;
       text-align: center;
       transition: all 0.3s;
-
-      &:hover {
-        color: #ffffff;
-      }
     }
 
     &.open {
@@ -85,4 +81,21 @@ body {
   &:has(.toggle-wrap.open) {
     grid-template-columns: 320px 2fr;
   }
+}
+
+.setting-modal {
+  position: fixed; /* モーダルを画面中央に配置 */
+  top: 40px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 背景を薄い黒に */
+  display: flex; /* 中央に配置するための設定 */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* 他の要素より前面に表示 */
+}
+
+.setting-content {
+  /* ここに設定画面のスタイルを定義 */
 }
