--- a/src/renderer/style/_global.scss
+++ b/src/renderer/style/_global.scss
@@ -84,18 +84,29 @@ body {
 }
 
 .setting-modal {
-  position: fixed; /* モーダルを画面中央に配置 */
+  position: fixed;
   top: 40px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* 背景を薄い黒に */
-  display: flex; /* 中央に配置するための設定 */
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex; 
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* 他の要素より前面に表示 */
+  z-index: 9999;
 }
 
 .setting-content {
-  /* ここに設定画面のスタイルを定義 */
+  min-width: 600px;
+  width: 80%;
+  height: 500px;
+  display: grid;
+  grid-template-columns: 259px 1fr;
+  position: relative;
+
+  div .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
