--- a/src/renderer/style/_global.scss
+++ b/src/renderer/style/_global.scss
@@ -48,8 +48,28 @@ body {
         display: none;
       }
 
-      &:hover > .setting {
+      &:hover>.setting {
         display: block;
+      }
+    }
+  }
+
+  .home {
+    margin-top: 10px;
+
+    span {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+
+      span {
+        display: none;
+      }
+
+      &:hover>span {
+        display: flex;
+        align-items: center;
       }
     }
   }
@@ -81,6 +101,10 @@ body {
   &:has(.toggle-wrap.open) {
     grid-template-columns: 320px 2fr;
   }
+
+  .add-project {
+    width: 100%;
+  }
 }
 
 .setting-modal {
@@ -90,7 +114,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex; 
+  display: flex;
   justify-content: center;
   align-items: center;
   z-index: 9999;
