--- a/src/renderer/style/_global.scss
+++ b/src/renderer/style/_global.scss
@@ -185,3 +185,46 @@ body {
     right: 0;
   }
 }
+
+.container {
+  display: flex;
+  padding: 20px;
+  gap: 20px;
+  height: calc(100% - 40px - 20px - 20px * 2);
+  position: relative;
+
+  .gutter {
+    width: 2px;
+    background-color: #6366F1;
+    cursor: col-resize;
+    border-width: 2px;
+  }
+
+  .rich {
+    display: grid;
+    grid-template-rows: 48px 1fr;
+
+    .dEditor {
+      padding: 10px;
+      border: 1px solid #ccc;
+      overflow: auto;
+
+      .DraftEditor-root {
+        height: calc(100% - 20px);
+      }
+    }
+  }
+
+  .markdown {
+    width: calc(100% - 20px);
+
+    .mEditor {
+      width: calc(100% - 20px);
+      height: calc(100% - 20px);
+      border: 1px solid #ccc;
+      padding: 10px;
+      resize: none;
+      overflow: auto;
+    }
+  }
+}
